{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 3133,
  "lineage": "8d3220ad-bf8c-8a62-51c0-7064a44372cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-07d40f5658c5dd996",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-199-62-155.compute-1.amazonaws.com",
            "public_ip": "34.199.62.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:616204075224:instance/i-0e4acc572b6a0f6e4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4acc572b6a0f6e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8f88431940904d0",
            "private_dns": "ip-172-17-10-10.ec2.internal",
            "private_ip": "172.17.10.10",
            "public_dns": "ec2-18-206-115-153.compute-1.amazonaws.com",
            "public_ip": "18.206.115.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06bf01d4ffeaad176",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0820533118461e35d",
            "tags": {
              "Name": "wakau-app-01"
            },
            "tags_all": {
              "Name": "wakau-app-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b543d4a61e2ba277"
            ]
          },
          "dependencies": [
            "aws_key_pair.wakau_key",
            "aws_security_group.app_security_group",
            "aws_subnet.app",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:616204075224:instance/i-0fb74361f0837d8ea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb74361f0837d8ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e2200bf182688b0",
            "private_dns": "ip-172-17-4-10.ec2.internal",
            "private_ip": "172.17.4.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-023d775b189966a1d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04db8fbddd33fad03",
            "tags": {
              "Name": "mongodb-1"
            },
            "tags_all": {
              "Name": "mongodb-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064a82b3ab36648e9"
            ]
          },
          "dependencies": [
            "aws_key_pair.wakau_key",
            "aws_security_group.jump_security_group",
            "aws_subnet.db",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:616204075224:instance/i-0bb3c8ddf17aa163a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb3c8ddf17aa163a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fe5aecb364af9019",
            "private_dns": "ip-172-17-5-10.ec2.internal",
            "private_ip": "172.17.5.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa9f96d80e441353",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047e91a960f5a69e2",
            "tags": {
              "Name": "mongodb-2"
            },
            "tags_all": {
              "Name": "mongodb-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064a82b3ab36648e9"
            ]
          },
          "dependencies": [
            "aws_key_pair.wakau_key",
            "aws_security_group.jump_security_group",
            "aws_subnet.db",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:616204075224:instance/i-06880635797712eae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06880635797712eae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0818ac6f10eaf455d",
            "private_dns": "ip-172-17-7-10.ec2.internal",
            "private_ip": "172.17.7.10",
            "public_dns": "ec2-52-90-12-214.compute-1.amazonaws.com",
            "public_ip": "52.90.12.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00bffe0e487ebf26f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02dc56d99ab8a0e92",
            "tags": {
              "Name": "jump-server"
            },
            "tags_all": {
              "Name": "jump-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064a82b3ab36648e9"
            ]
          },
          "dependencies": [
            "aws_key_pair.wakau_key",
            "aws_security_group.jump_security_group",
            "aws_subnet.jump",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:616204075224:instance/i-053c2ce4261337d23",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-053c2ce4261337d23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e73996490c219e60",
            "private_dns": "ip-172-17-4-20.ec2.internal",
            "private_ip": "172.17.4.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4a51d78faa8b6d1",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04db8fbddd33fad03",
            "tags": {
              "Name": "redis-1"
            },
            "tags_all": {
              "Name": "redis-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064a82b3ab36648e9"
            ]
          },
          "dependencies": [
            "aws_key_pair.wakau_key",
            "aws_security_group.jump_security_group",
            "aws_subnet.db",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0015b9ef68c77328d",
            "arn": "arn:aws:ec2:us-east-1:616204075224:instance/i-06d61f0b85ec394b3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d61f0b85ec394b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform.pem",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05318d6ab86b54485",
            "private_dns": "ip-172-17-5-20.ec2.internal",
            "private_ip": "172.17.5.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0243a0abf8cf42a06",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047e91a960f5a69e2",
            "tags": {
              "Name": "redis-2"
            },
            "tags_all": {
              "Name": "redis-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064a82b3ab36648e9"
            ]
          },
          "dependencies": [
            "aws_key_pair.wakau_key",
            "aws_security_group.jump_security_group",
            "aws_subnet.db",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:internet-gateway/igw-0e6f64f96a36a7880",
            "id": "igw-0e6f64f96a36a7880",
            "owner_id": "616204075224",
            "tags": {
              "Name": "wp_igw"
            },
            "tags_all": {
              "Name": "wp_igw"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d40f5658c5dd996",
            "connectivity_type": "public",
            "id": "nat-041ccfd1ea819fe01",
            "network_interface_id": "eni-03039287fe5027e3c",
            "private_ip": "172.17.1.79",
            "public_ip": "34.199.62.155",
            "subnet_id": "subnet-0940433ebd70f4474",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:network-acl/acl-06160409dd2c76141",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "172.17.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06160409dd2c76141",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "172.17.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "616204075224",
            "subnet_ids": [
              "subnet-02e3a89c4474a5a13",
              "subnet-0820533118461e35d",
              "subnet-0fe820329c0434755"
            ],
            "tags": {
              "Name": "wakau-app-public-nacl"
            },
            "tags_all": {
              "Name": "wakau-app-public-nacl"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:network-acl/acl-0fa022c8647714a94",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 101,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "172.17.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fa022c8647714a94",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 101,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "172.17.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "616204075224",
            "subnet_ids": [
              "subnet-0172202f1a13bd364",
              "subnet-047e91a960f5a69e2",
              "subnet-04db8fbddd33fad03"
            ],
            "tags": {
              "Name": "database-private-nacl"
            },
            "tags_all": {
              "Name": "database-private-nacl"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.db",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:network-acl/acl-090381d390639ac01",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "172.17.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-090381d390639ac01",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "172.17.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "616204075224",
            "subnet_ids": [
              "subnet-02dc56d99ab8a0e92"
            ],
            "tags": {
              "Name": "jump-default-nacl"
            },
            "tags_all": {
              "Name": "jump-default-nacl"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.jump",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:network-acl/acl-0fb0827a74deefe91",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fb0827a74deefe91",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "616204075224",
            "subnet_ids": [
              "subnet-0940433ebd70f4474",
              "subnet-0ede5e1ac7ccfa217",
              "subnet-0f6625e4c73f709e1"
            ],
            "tags": {
              "Name": "loadbalancer-public-nacl"
            },
            "tags_all": {
              "Name": "loadbalancer-public-nacl"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:route-table/rtb-084f54c285a651536",
            "id": "rtb-084f54c285a651536",
            "owner_id": "616204075224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6f64f96a36a7880",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wakau-public-rt"
            },
            "tags_all": {
              "Name": "wakau-public-rt"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:route-table/rtb-0b808bb52c94a7c3c",
            "id": "rtb-0b808bb52c94a7c3c",
            "owner_id": "616204075224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-041ccfd1ea819fe01",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "database-private-rt"
            },
            "tags_all": {
              "Name": "database-private-rt"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jump_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:route-table/rtb-07640eccd2bdc5da3",
            "id": "rtb-07640eccd2bdc5da3",
            "owner_id": "616204075224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6f64f96a36a7880",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jump-default-rt"
            },
            "tags_all": {
              "Name": "jump-default-rt"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lb_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:route-table/rtb-046358582870ffcc0",
            "id": "rtb-046358582870ffcc0",
            "owner_id": "616204075224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6f64f96a36a7880",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "loadbalancer-public-rt"
            },
            "tags_all": {
              "Name": "loadbalancer-public-rt"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c98c56b3e3b5507c",
            "route_table_id": "rtb-046358582870ffcc0",
            "subnet_id": "subnet-0940433ebd70f4474"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.lb_rt",
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0181810523c864741",
            "route_table_id": "rtb-046358582870ffcc0",
            "subnet_id": "subnet-0ede5e1ac7ccfa217"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.lb_rt",
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002bf52d91202bb91",
            "route_table_id": "rtb-046358582870ffcc0",
            "subnet_id": "subnet-0f6625e4c73f709e1"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.lb_rt",
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b2fc1ea1f87d3e",
            "route_table_id": "rtb-084f54c285a651536",
            "subnet_id": "subnet-0820533118461e35d"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.app_rt",
            "aws_subnet.app",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1ea3d9ca4084eef",
            "route_table_id": "rtb-084f54c285a651536",
            "subnet_id": "subnet-0fe820329c0434755"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.app_rt",
            "aws_subnet.app",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060ff8498269edb6a",
            "route_table_id": "rtb-084f54c285a651536",
            "subnet_id": "subnet-02e3a89c4474a5a13"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.app_rt",
            "aws_subnet.app",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06df66af125851851",
            "route_table_id": "rtb-0b808bb52c94a7c3c",
            "subnet_id": "subnet-04db8fbddd33fad03"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_route_table.db_rt",
            "aws_subnet.db",
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d15aff939129511",
            "route_table_id": "rtb-0b808bb52c94a7c3c",
            "subnet_id": "subnet-047e91a960f5a69e2"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_route_table.db_rt",
            "aws_subnet.db",
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ae72d43d32136ca",
            "route_table_id": "rtb-0b808bb52c94a7c3c",
            "subnet_id": "subnet-0172202f1a13bd364"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.ng",
            "aws_route_table.db_rt",
            "aws_subnet.db",
            "aws_subnet.lb",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09114761626e51980",
            "route_table_id": "rtb-07640eccd2bdc5da3",
            "subnet_id": "subnet-02dc56d99ab8a0e92"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.jump_rt",
            "aws_subnet.jump",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:security-group/sg-0b543d4a61e2ba277",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b543d4a61e2ba277",
            "ingress": [],
            "name": "App SG",
            "name_prefix": "",
            "owner_id": "616204075224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wakau App SG"
            },
            "tags_all": {
              "Name": "Wakau App SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:security-group/sg-064a82b3ab36648e9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-064a82b3ab36648e9",
            "ingress": [],
            "name": "Jump Security",
            "name_prefix": "",
            "owner_id": "616204075224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Wakau Jump SG"
            },
            "tags_all": {
              "Name": "Wakau Jump SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow All Outbound",
            "from_port": 0,
            "id": "sgrule-861255349",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b543d4a61e2ba277",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "114.143.194.146/32"
            ],
            "description": "Skyone",
            "from_port": 22,
            "id": "sgrule-1152560578",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b543d4a61e2ba277",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "49.248.109.190/32"
            ],
            "description": "Skyone",
            "from_port": 22,
            "id": "sgrule-1063364204",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b543d4a61e2ba277",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": "rule3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "14.141.39.130/32"
            ],
            "description": "Skyone",
            "from_port": 22,
            "id": "sgrule-1104486482",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b543d4a61e2ba277",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": "rule4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.17.0.0/16"
            ],
            "description": "Internal Network",
            "from_port": 0,
            "id": "sgrule-4122308209",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b543d4a61e2ba277",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": "rule5",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Internet This should not be added, but for testing",
            "from_port": 0,
            "id": "sgrule-960115169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b543d4a61e2ba277",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jump_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow All Outbound",
            "from_port": 0,
            "id": "sgrule-2929784501",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-064a82b3ab36648e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jump_security_group",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jump_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rule1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "114.143.194.146/32"
            ],
            "description": "Skyone",
            "from_port": 22,
            "id": "sgrule-1135307889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064a82b3ab36648e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jump_security_group",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": "rule2",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "49.248.109.190/32"
            ],
            "description": "Skyone",
            "from_port": 22,
            "id": "sgrule-1264847976",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064a82b3ab36648e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jump_security_group",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": "rule3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "14.141.39.130/32"
            ],
            "description": "Skyone",
            "from_port": 22,
            "id": "sgrule-4121804497",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-064a82b3ab36648e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jump_security_group",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": "rule4",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.17.0.0/16"
            ],
            "description": "Internal Network",
            "from_port": 0,
            "id": "sgrule-423719712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-064a82b3ab36648e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jump_security_group",
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": "rule5",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Internet This should not be added, but for testing",
            "from_port": 0,
            "id": "sgrule-967296161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-064a82b3ab36648e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jump_security_group",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-0820533118461e35d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.10.0/24",
            "id": "subnet-0820533118461e35d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-app-subnet-1"
            },
            "tags_all": {
              "Name": "wakau-app-subnet-1"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-0fe820329c0434755",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.11.0/24",
            "id": "subnet-0fe820329c0434755",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-app-subnet-2"
            },
            "tags_all": {
              "Name": "wakau-app-subnet-2"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-02e3a89c4474a5a13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.12.0/24",
            "id": "subnet-02e3a89c4474a5a13",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-app-subnet-3"
            },
            "tags_all": {
              "Name": "wakau-app-subnet-3"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-04db8fbddd33fad03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.4.0/24",
            "id": "subnet-04db8fbddd33fad03",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-db-subnet-1"
            },
            "tags_all": {
              "Name": "wakau-db-subnet-1"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-047e91a960f5a69e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.5.0/24",
            "id": "subnet-047e91a960f5a69e2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-db-subnet-2"
            },
            "tags_all": {
              "Name": "wakau-db-subnet-2"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-0172202f1a13bd364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.6.0/24",
            "id": "subnet-0172202f1a13bd364",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-db-subnet-3"
            },
            "tags_all": {
              "Name": "wakau-db-subnet-3"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-02dc56d99ab8a0e92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.7.0/28",
            "id": "subnet-02dc56d99ab8a0e92",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-jump-subnet"
            },
            "tags_all": {
              "Name": "wakau-jump-subnet"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-0940433ebd70f4474",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-0940433ebd70f4474",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-lb-subnet-1"
            },
            "tags_all": {
              "Name": "wakau-lb-subnet-1"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-0ede5e1ac7ccfa217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-0ede5e1ac7ccfa217",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-lb-subnet-2"
            },
            "tags_all": {
              "Name": "wakau-lb-subnet-2"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:subnet/subnet-0f6625e4c73f709e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0f6625e4c73f709e1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "616204075224",
            "tags": {
              "Name": "wakau-lb-subnet-3"
            },
            "tags_all": {
              "Name": "wakau-lb-subnet-3"
            },
            "vpc_id": "vpc-0154af0c1c6cb3451"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:616204075224:vpc/vpc-0154af0c1c6cb3451",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-01ebe0e64def35d43",
            "default_route_table_id": "rtb-07aaf7f68dc480722",
            "default_security_group_id": "sg-00f9da6d3d313a100",
            "dhcp_options_id": "dopt-0d8d173f33ba709c2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0154af0c1c6cb3451",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07aaf7f68dc480722",
            "owner_id": "616204075224",
            "tags": {
              "Name": "TerraVPC"
            },
            "tags_all": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}